base/ingress-service-hostbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-tls-reencryption
  namespace: confluent-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
      - mds.mydomain.com
      - controlcenter.mydomain.com
      - ksqldb.mydomain.com
      - connect.mydomain.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for mydomain.com
      secretName: tls-nginx-cert
  rules:
    - host: mds.mydomain.com
      http:
        paths:
          - backend:
              serviceName: mds-bootstrap
              servicePort: 8090
    - host: controlcenter.mydomain.com
      http:
        paths:
          - backend:
              serviceName: controlcenter-0-internal
              servicePort: 9021
    - host: ksqldb.mydomain.com
      http:
        paths:
          - backend:
              serviceName: ksqldb-bootstrap
              servicePort: 8088
    - host: connect.mydomain.com
      http:
        paths:
          - backend:
              serviceName: connect-bootstrap
              servicePort: 8083
